// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should override margin props from less to more specific 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
-     "margin": "calc(40px) calc(20px) calc(4px) calc(12px)",
-     "margin-bottom": "calc(4px)",
-     "margin-left": "calc(12px)",
-     "margin-right": "calc(20px)",
-     "margin-top": "calc(40px)",
+     "margin-bottom": "calc(8px)",
    },
  ]
`;

exports[`props should override padding props from less to more specific 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding": "calc(20px) calc(40px) calc(8px) calc(12px)",
-     "padding-bottom": "calc(8px)",
-     "padding-left": "calc(12px)",
-     "padding-right": "calc(40px)",
-     "padding-top": "calc(20px)",
    },
  ]
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin-bottom: calc(4px * 2);
}

<div
  class="components-spacer emotion-0 emotion-1"
  data-testid="spacer"
  data-wp-c16t="true"
  data-wp-component="Spacer"
/>
`;

exports[`props should render margin 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
-     "margin": "calc(20px) calc(20px) calc(8px)",
      "margin-bottom": "calc(8px)",
-     "margin-left": "calc(20px)",
-     "margin-right": "calc(20px)",
-     "margin-top": "calc(20px)",
    },
  ]
`;

exports[`props should render marginBottom 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
-     "margin-bottom": "calc(20px)",
+     "margin-bottom": "calc(8px)",
    },
  ]
`;

exports[`props should render marginLeft 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "margin-left": "calc(20px)",
    },
  ]
`;

exports[`props should render marginRight 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "margin-right": "calc(20px)",
    },
  ]
`;

exports[`props should render marginTop 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "margin-top": "calc(20px)",
    },
  ]
`;

exports[`props should render marginX 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "margin-left": "calc(20px)",
-     "margin-right": "calc(20px)",
    },
  ]
`;

exports[`props should render marginY 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "margin-top": "calc(20px)",
    },
  ]
`;

exports[`props should render padding 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding": "calc(20px)",
-     "padding-bottom": "calc(20px)",
-     "padding-left": "calc(20px)",
-     "padding-right": "calc(20px)",
-     "padding-top": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingBottom 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-bottom": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingLeft 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-left": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingRight 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-right": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingTop 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-top": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingX 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-left": "calc(20px)",
-     "padding-right": "calc(20px)",
    },
  ]
`;

exports[`props should render paddingY 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "margin-bottom": "calc(8px)",
-     "padding-bottom": "calc(20px)",
-     "padding-top": "calc(20px)",
    },
  ]
`;
